--- a/index.html
+++ b/index.html
@@ -1,8 +1,133 @@
-<html>
-	<head>
-		<title>BitBerry</title>
-	</head>
-	<body>
-		<h1>This is BitBerry!</h1>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>BitBerry</title>
+	<link rel="stylesheet" href="style/main.css" media="screen" title="no title">
+</head>
+<body>
+	<div class="nav">
+		<div class="navLeft">
+			<div class="logo">
+			</div>
+		</div>
+		<div class="navRight">
+			<ul class="menu">
+				<li><a href="#">WHAT WE DO</a></li>
+				<li><a href="#">WHO WE ARE</a></li>
+				<li><a href="#">BLOG</a></li>
+			</ul>
+		</div>
+	</div>
+	<section class="header">
+		<div class="content">
+			<h1 class="title">
+				WE CREATE APPLICATION THAT MATTER
+			</h1>
+			<p class="subscribute">
+				We are a full service digital agency based in Shanghai & Berlin. We are Data Science, API and DevOps experts.
+			</p>
+			<button type="button" name="button">WORK WITH US</button>
+		</div>
+	</section>
+	<section>
+		<div class="content2">
+			<div class="proj">
+				<h4 class="projTitle">DSFR CMS SYSTEM</h4>
+				<p class="projSubscri">Type something</p>
+				<div class="projImg"></div>
+			</div>
+			<div class="proj">
+				<h4 class="projTitle">DSFR CMS SYSTEM</h4>
+				<p class="projSubscri">Type something</p>
+				<div class="projImg"></div>
+			</div>
+			<div class="proj">
+				<h4 class="projTitle">DSFR CMS SYSTEM</h4>
+				<p class="projSubscri">Type something</p>
+				<div class="projImg"></div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="content2">
+			<div class="proj">
+				<h4 class="projTitle">DSFR CMS SYSTEM</h4>
+				<p class="projSubscri">Type something</p>
+				<div class="projImg"></div>
+			</div>
+			<div class="proj">
+				<h4 class="projTitle">DSFR CMS SYSTEM</h4>
+				<p class="projSubscri">Type something</p>
+				<div class="projImg"></div>
+			</div>
+			<div class="proj">
+				<h4 class="projTitle">DSFR CMS SYSTEM</h4>
+				<p class="projSubscri">Type something</p>
+				<div class="projImg"></div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="content3">
+			<h1 class="title">
+				WHAT WE REALLY GOOD AT
+			</h1>
+			<p class="subscribute">
+				We are a full service digital agency based in Shanghai & Berlin. We are Data Science, API and DevOps experts.
+			</p>
+		</div>
+	</section>
+	<section>
+		<div class="content4">
+			<div class="goodAt">
+				<div class="skillImg"></div>
+				<div class="skillSubs">
+					<h4 class="skillTitle">Large scale cluster deployment</h4>
+					<p class="skillSubs">
+						We help teams figure out what to do in the first place,
+						through product design or ideation. Our expertise extends
+						to product development, Open Data and elections.
+					</p>
+				</div>
+			</div>
+			<div class="goodAt">
+				<div class="skillImg"></div>
+				<div class="skillSubs">
+					<h4 class="skillTitle">Large scale cluster deployment</h4>
+					<p class="skillSubs">
+						We help teams figure out what to do in the first place,
+						through product design or ideation. Our expertise extends
+						to product development, Open Data and elections.
+					</p>
+				</div>
+			</div>
+			<div class="goodAt">
+				<div class="skillImg"></div>
+				<div class="skillSubs">
+					<h4 class="skillTitle">Large scale cluster deployment</h4>
+					<p class="skillSubs">
+						We help teams figure out what to do in the first place,
+						through product design or ideation. Our expertise extends
+						to product development, Open Data and elections.
+					</p>
+				</div>
+			</div>
+			<div class="goodAt">
+				<div class="skillImg"></div>
+				<div class="skillSubs">
+					<h4 class="skillTitle">Large scale cluster deployment</h4>
+					<p class="skillSubs">
+						We help teams figure out what to do in the first place,
+						through product design or ideation. Our expertise extends
+						to product development, Open Data and elections.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+</body>
+<script src="script/main.js"></script>
 </html>
