--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,8 +16,8 @@
 		</div>
 		<div class="navRight">
 			<ul class="menu">
-				<li><a href="#">WHAT WE DO</a></li>
-				<li><a href="#">WHO WE ARE</a></li>
+				<li><a href="./index.html">WHAT WE DO</a></li>
+				<li><a href="./content.html">WHO WE ARE</a></li>
 				<li><a href="#">BLOG</a></li>
 			</ul>
 		</div>
@@ -128,6 +129,34 @@
 			</div>
 		</div>
 	</section>
+	<section class="header">
+		<div class="content5">
+			<h1 class="title">
+				GET IN TOUCH WITH US
+			</h1>
+			<div class="btns">
+				<button class="btn1" type="button" name="button">HIRE US</button>
+				<p class="p">OR</p>
+				<button class="btn2" type="button" name="button">READ MORE ABOUT US</button>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="about">
+			<h5>More About</h5>
+			<div class="links">
+				<ul>
+					<li><a href="">About</a></li>
+					<li><a href="">Content</a></li>
+					<li><a href="">Jobs</a></li>
+					<li><a href="">Blog</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="copyright">
+			Copyright @ 2016 BitBerry.io
+		</div>
+	</footer>
 </body>
 <script src="script/main.js"></script>
 </html>
