--- a/emoji/index.html
+++ b/emoji/index.html
@@ -39,7 +39,7 @@ body { margin: 0; padding: 0; position: relative; background-image: url(images/x
 
 	var particleImage = new Image();
 	//THREE.ImageUtils.loadTexture( "img/ParticleSmoke.png" );
-	particleImage.src = 'images/ParticleSmoke.png';
+	particleImage.src = 'hahaha.gif';
 
 
 	function init() {
