--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="baidu_ssp_verify" content="feb56ac49ed98a3f189fcece95b9f868">
 	<title>BitBerry</title>
 	<link rel="stylesheet" href="style/main.css" media="screen" title="no title">
 </head>
